[metadata]
name = lecluvindex
version = 1.1.0a4
url = https://github.com/cganterh/lecluvindex
author = Cristóbal Ganter
author_email = cganterh@gmail.com
description = Chilean UV index plugin for the Le bot.
long_description = file: README.rst
keywords = python, python3, telegram-bot, chatbot
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Communications :: Chat

[options]
test_suite = tests
install_requires =
    python-telegram-bot~=10.0
    requests~=2.18
py_modules = lecluvindex

[options.entry_points]
le.handlers =
    le_cl_uv_index_report_send=lecluvindex:send_handler
    le_cl_uv_index_report_start=lecluvindex:start_handler
    le_cl_uv_index_report_stop=lecluvindex:stop_handler

[coverage:run]
include = lecluvindex.py

[flake8]
exclude = build
